updated: fixed entity name getting truncated

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -67,6 +67,10 @@
         display: flex !important;
         gap: 8px !important;
     }
+
+    [data-boc-right]{
+        position: unset;
+    }
 }
 
 .boc-chart-menu {
@@ -697,6 +701,10 @@
     foreignObject {
         @extend .bg-transparent;
         
+    }
+
+    .text-white{
+        color: #000 !important;
     }
     
 }
