--- a/src/scss/filejet-style.css
+++ b/src/scss/filejet-style.css
@@ -18022,6 +18022,9 @@ body .caledar-event-upcoming {
   display: flex !important;
   gap: 8px !important;
 }
+.boc-light [data-boc-right] {
+  position: unset;
+}
 
 .boc-chart-menu {
   min-width: 195px !important;
@@ -18531,6 +18534,10 @@ body .caledar-event-upcoming {
 
 .match text {
   fill: #000;
+}
+
+.match .text-white, .match .customTooltip .tooltipText, .customTooltip .match .tooltipText, .match .org-chart-option .entites-chart:hover, .org-chart-option .match .entites-chart:hover, .match .org-chart-option .subsidiary-chart:hover, .org-chart-option .match .subsidiary-chart:hover, .match .first-org-chart-modal .chooseTemplate .templates.active h4, .first-org-chart-modal .chooseTemplate .templates.active .match h4, .match .first-org-chart-modal .chooseTemplate .templates.active, .first-org-chart-modal .chooseTemplate .match .templates.active, .match .tooltip-entity-content, .match body .jconfirm-box-container .jconfirm-box div, body .jconfirm-box-container .jconfirm-box .match div, .match .previewSlides .carousel-item .nav-link.active, .previewSlides .carousel-item .match .nav-link.active, .match .previewSlides .owl-carousel .nav-link.active, .previewSlides .owl-carousel .match .nav-link.active, .match .previewSlides .owl-carousel .owl-nav .owl-prev, .previewSlides .owl-carousel .owl-nav .match .owl-prev, .match .previewSlides .owl-carousel .owl-nav .owl-next, .previewSlides .owl-carousel .owl-nav .match .owl-next, .match .integrationBtn.show {
+  color: #000 !important;
 }
 
 .node.match g rect {
